--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,7 +2,6 @@ env:
   CIRRUS_CLONE_DEPTH: 1
   ARCH: amd64
 
-
 task:
   freebsd_instance:
     matrix:
@@ -12,6 +11,4 @@ task:
     - sed -i.bak -e 's,pkg+http://pkg.FreeBSD.org/\${ABI}/quarterly,pkg+http://pkg.FreeBSD.org/\${ABI}/latest,' /etc/pkg/FreeBSD.conf
     - pkg upgrade -y
     - pkg install -y gmake coreutils
-  script: |
-    MOREFLAGS="-Werror" gmake -j all
-    gmake test
+  script: gmake test
