--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,14 +1,5 @@
-
-env:
-  CIRRUS_CLONE_DEPTH: 1
-  ARCH: amd64
+freebsd_instance:
+  image_family: freebsd-12-0
 
 task:
-  freebsd_instance:
-    matrix:
-      image: freebsd-11-2-release-amd64
-  install_script:
-    - sed -i.bak -e 's,pkg+http://pkg.FreeBSD.org/\${ABI}/quarterly,pkg+http://pkg.FreeBSD.org/\${ABI}/latest,' /etc/pkg/FreeBSD.conf
-    - pkg upgrade -y
-    - pkg install -y gmake coreutils
   script: gmake test
