--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,5 +2,6 @@ freebsd_instance:
   image_family: freebsd-12-0
 
 task:
-  install_script: pkg install -y gmake
-  script: gmake test
+  script:
+      pkg install -y gmake
+      - gmake test
