--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,6 +2,4 @@ freebsd_instance:
   image_family: freebsd-12-0
 
 task:
-  script:
-      pkg install -y gmake
-      - gmake test
+  script: pkg install -y gmake && gmake test
